objects/TM_Line__c/TM_Line__c.object-meta.xml
<CustomObject>
    <label>T&amp;M Line</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;M Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>