objects/TM_Line__c/fields/Bill_Site_Time__c.field-meta.xml
<CustomField>
    <fullName>Bill_Site_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Site Time</label>
    <type>Checkbox</type>
</CustomField>