objects/TM_Line__c/fields/Billing_Worksheet_Line__c.field-meta.xml
<CustomField>
    <fullName>Billing_Worksheet_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Worksheet Line</label>
    <referenceTo>Billing_Worksheet_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>TM_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>