objects/TM_Line__c/fields/Billing_Worksheet_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Worksheet_Line_Amount__c</fullName>
    <formula>IF (Billing_Worksheet_Line__r.Invoiced__c = TRUE, 0, IF(Billing_Worksheet_Line__r.Bill_as_Lump_Sum__c == TRUE &amp;&amp; Billing_Worksheet_Line__r.Bundle_Line__c == NULL, Billing_Worksheet_Line__r.xLine_Amount__c, Billing_Worksheet_Line__r.Line_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unbilled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>