objects/TM_Line__c/fields/Billing_Worksheet_Qty__c.field-meta.xml
<CustomField>
    <fullName>Billing_Worksheet_Qty__c</fullName>
    <formula>Billing_Worksheet_Line__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Worksheet Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>