objects/TM_Line__c/fields/BOL_Manifest_Workorder_Id__c.field-meta.xml
<CustomField>
    <fullName>BOL_Manifest_Workorder_Id__c</fullName>
    <label>BOL Manifest Workorder Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>