objects/TM_Line__c/fields/Bundle_Line__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Bundle Line)</relationshipLabel>
    <relationshipName>T_M_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>