objects/TM_Line__c/fields/Check_if_Lunch_time_is_greater__c.field-meta.xml
<CustomField>
    <fullName>Check_if_Lunch_time_is_greater__c</fullName>
    <formula>IF((VALUE(LEFT(  Job_Start_Time_24_Hrs__c ,2)) &lt; VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp;
(VALUE(LEFT(Lunch_end_time_24_hrs__c,2))  &gt;  VALUE(LEFT(Job_end_time_24_hrs__c,2))), TRUE, 

IF((VALUE(LEFT( Job_Start_Time_24_Hrs__c ,2)) &lt; VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp;(VALUE(LEFT(Lunch_end_time_24_hrs__c,2))   =   VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp; (VALUE(MID(Lunch_end_time_24_hrs__c,4,2)) &gt; VALUE(MID(Job_end_time_24_hrs__c,4,2))), TRUE, 

IF((VALUE(LEFT( Job_Start_Time_24_Hrs__c ,2)) &gt; VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp;
(VALUE(LEFT(Lunch_end_time_24_hrs__c ,2))  &gt;  VALUE(LEFT(Job_end_time_24_hrs__c,2))) &amp;&amp;
(VALUE(LEFT(Lunch_end_time_24_hrs__c ,2))  &lt;  VALUE(LEFT(Job_Start_Time_24_Hrs__c,2))), TRUE,

IF((VALUE(LEFT( Job_Start_Time_24_Hrs__c,2)) &gt; VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp;
(VALUE(LEFT(Lunch_end_time_24_hrs__c,2))   =   VALUE(LEFT(Job_end_time_24_hrs__c,2)))&amp;&amp; (VALUE(MID(Lunch_end_time_24_hrs__c,4,2)) &gt; VALUE(MID(Job_end_time_24_hrs__c,4,2))), TRUE,
FALSE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check if Lunch time is greater</label>
    <type>Checkbox</type>
</CustomField>