objects/TM_Line__c/fields/Check_Value__c.field-meta.xml
<CustomField>
    <fullName>Check_Value__c</fullName>
    <description>For Unit Cost Checking</description>
    <label>Check Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>