objects/TM_Line__c/fields/CheckStartTime__c.field-meta.xml
<CustomField>
    <fullName>CheckStartTime__c</fullName>
    <formula>Site_Start_Time__c  =  Site_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckStartTime</label>
    <type>Checkbox</type>
</CustomField>