objects/TM_Line__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container Size</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit_of_Measure__c.Container_Size__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Container Size)</relationshipLabel>
    <relationshipName>T_M_Lines6</relationshipName>
    <type>Lookup</type>
</CustomField>