objects/TM_Line__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Line</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>T_M_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>