objects/TM_Line__c/fields/Contract_Overtime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Overtime_Rate__c</fullName>
    <label>Contract Overtime Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>