objects/TM_Line__c/fields/Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Cost_Method__c</fullName>
    <label>Cost Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CostMethod</valueSetName>
    </valueSet>
</CustomField>