objects/TM_Line__c/fields/Cost_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Cost Unit of Measure)</relationshipLabel>
    <relationshipName>T_M_Lines5</relationshipName>
    <type>Lookup</type>
</CustomField>