objects/TM_Line__c/fields/Data_Updated__c.field-meta.xml
<CustomField>
    <fullName>Data_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Updated</label>
    <type>Checkbox</type>
</CustomField>