objects/TM_Line__c/fields/Eligible_Dispatch_from_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Dispatch_from_Home_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible Dispatch from Home Pay</label>
    <type>Checkbox</type>
</CustomField>