objects/TM_Line__c/fields/EQAI_Bill_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Bill_Unit_Code__c</fullName>
    <label>EQAI Bill Unit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>