objects/TM_Line__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>T_M_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>