objects/TM_Line__c/fields/Fleet_No__c.field-meta.xml
<CustomField>
    <fullName>Fleet_No__c</fullName>
    <label>Fleet No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>