objects/TM_Line__c/fields/Fleet_No_Required__c.field-meta.xml
<CustomField>
    <fullName>Fleet_No_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleet No Required</label>
    <type>Checkbox</type>
</CustomField>