objects/TM_Line__c/fields/FLSA__c.field-meta.xml
<CustomField>
    <fullName>FLSA__c</fullName>
    <formula>TEXT(Resource__r.FLSA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLSA</label>
    <type>Text</type>
</CustomField>