objects/TM_Line__c/fields/From_Billing_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>From_Billing_Worksheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Billing Worksheet</label>
    <type>Checkbox</type>
</CustomField>