objects/TM_Line__c/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <label>Fuel Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>