objects/TM_Line__c/fields/Include_Lunch_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Include_Lunch_Y_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Lunch Y/N</label>
    <type>Checkbox</type>
</CustomField>