objects/TM_Line__c/fields/Inter_Company_Resource__c.field-meta.xml
<CustomField>
    <fullName>Inter_Company_Resource__c</fullName>
    <formula>IF(Service_Center__c&lt;&gt;TM__r.Service_Center__c&amp;&amp;Service_Center__r.Temporary__c&lt;&gt;true, true, false)</formula>
    <label>Inter-Company Resource</label>
    <type>Checkbox</type>
</CustomField>