objects/TM_Line__c/fields/Is_Equal__c.field-meta.xml
<CustomField>
    <fullName>Is_Equal__c</fullName>
    <formula>OR(AND(Job_Start_Time__c ==  Site_Start_Time__c, Site_Start_Time__c == Site_End_Time__c), AND(Site_Start_Time__c == Site_End_Time__c, Site_End_Time__c == Job_End_Time__c))</formula>
    <label>Is Equal</label>
    <type>Checkbox</type>
</CustomField>