objects/TM_Line__c/fields/Is_Line_Amount_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Line_Amount_Correct__c</fullName>
    <formula>IF(Text_Line_Amount__c == Text_Line_Amount_Check__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Line Amount Correct</label>
    <type>Checkbox</type>
</CustomField>