objects/TM_Line__c/fields/Is_Res_Type_Equals_Res_Res_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Res_Type_Equals_Res_Res_Type__c</fullName>
    <formula>Resource_Type__c ==  Resource__r.Resource_Type__c</formula>
    <label>Is Res Type Equals Res Res Type</label>
    <type>Checkbox</type>
</CustomField>