objects/TM_Line__c/fields/Job_end_time_24_hrs__c.field-meta.xml
<CustomField>
    <fullName>Job_end_time_24_hrs__c</fullName>
    <formula>TEXT( Job_End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job end time 24 hrs</label>
    <type>Text</type>
</CustomField>