objects/TM_Line__c/fields/Job_Start_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Time_24_Hrs__c</fullName>
    <formula>TEXT(Job_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Start Time 24 Hrs</label>
    <type>Text</type>
</CustomField>