objects/TM_Line__c/fields/Job_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Time__c</fullName>
    <label>Job Start Time</label>
    <type>Time</type>
</CustomField>