objects/TM_Line__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>Sales_Order_Type__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>Service_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>