objects/TM_Line__c/fields/Kronos_Integration_Note__c.field-meta.xml
<CustomField>
    <fullName>Kronos_Integration_Note__c</fullName>
    <label>Kronos Integration Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>