objects/TM_Line__c/fields/KronosTimeEntriesProcessed__c.field-meta.xml
<CustomField>
    <fullName>KronosTimeEntriesProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KronosTimeEntriesProcessed</label>
    <type>Checkbox</type>
</CustomField>