objects/TM_Line__c/fields/Line_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount_Check__c</fullName>
    <formula>Line_Amount__c - (Quantity__c * Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>