objects/TM_Line__c/fields/Linked_Line__c.field-meta.xml
<CustomField>
    <fullName>Linked_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Linked Line)</relationshipLabel>
    <relationshipName>T_M_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>