objects/TM_Line__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>1/2 Hour</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>