objects/TM_Line__c/fields/Lunch_end_time_24_hrs__c.field-meta.xml
<CustomField>
    <fullName>Lunch_end_time_24_hrs__c</fullName>
    <formula>TEXT( Lunch_End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch end time 24 hrs</label>
    <type>Text</type>
</CustomField>