objects/TM_Line__c/fields/Lunch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Hours__c</fullName>
    <formula>IF (TEXT(Category__c) == 'Labor' &amp;&amp; ISNULL(Lunch_Start_Time__c) == FALSE &amp;&amp; ISNULL(Lunch_End_Time__c) == FALSE, (Lunch_End_Time__c - Lunch_Start_Time__c)/3600000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>