objects/TM_Line__c/fields/Lunch_Start_24__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start_24__c</fullName>
    <formula>TEXT( Lunch_Start_Time__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Start Time 24 Hrs.</label>
    <type>Text</type>
</CustomField>