objects/TM_Line__c/fields/Lunch_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start_Time__c</fullName>
    <label>Lunch Start Time</label>
    <type>Time</type>
</CustomField>