objects/TM_Line__c/fields/Lunch_Test__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Test__c</fullName>
    <formula>IF((VALUE(LEFT(  Lunch_Start_24__c ,2)) &gt; VALUE(LEFT( Job_end_time_24_hrs__c , 2))), TRUE, 
IF((VALUE(LEFT( Lunch_Start_24__c , 2)) = VALUE(LEFT( Job_end_time_24_hrs__c ,2))) &amp;&amp; 
(VALUE(MID( Lunch_Start_24__c,4,2)) &gt; VALUE(MID( Job_end_time_24_hrs__c ,4,2))),TRUE, 
FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Test</label>
    <type>Checkbox</type>
</CustomField>