objects/TM_Line__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <formula>IF(
   CONTAINS( TM__r.Service_Center__r.Code__c , (  Service_Center__r.Code__c  )),
   "TRUE",
   "FALSE"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked = Resource Matches T&amp;M SC</inlineHelpText>
    <label>SC Match</label>
    <type>Text</type>
</CustomField>