objects/TM_Line__c/fields/Material_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Type_Category__c</fullName>
    <formula>TEXT(Resource__r.Material_Type_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Type Category</label>
    <type>Text</type>
</CustomField>