objects/TM_Line__c/fields/New_Rate_Import__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Rate Import</label>
    <type>Checkbox</type>
</CustomField>