objects/TM_Line__c/fields/New_Rate_Updated__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Rate Updated</label>
    <type>Checkbox</type>
</CustomField>