objects/TM_Line__c/fields/Old_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_Cost__c</fullName>
    <description>For Unit Cost Checking</description>
    <label>Old Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>