objects/TM_Line__c/fields/Overtime_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate_New__c</fullName>
    <label>Overtime Rate (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>