objects/TM_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TM_Line__c.TM__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.TM__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipName>TM_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>