objects/TM_Line__c/fields/Pick_Up_R_O__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_R_O__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pick Up R/O</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Resource__c</field>
            <operation>equals</operation>
            <valueField>Rental_Order__c.Resource__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Rental_Order__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Pick Up R/O)</relationshipLabel>
    <relationshipName>T_M_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>