objects/TM_Line__c/fields/Pick_Up_Rental__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pick Up Rental</label>
    <type>Checkbox</type>
</CustomField>