objects/TM_Line__c/fields/Premium_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rate_New__c</fullName>
    <label>Double Time Rate (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>