objects/TM_Line__c/fields/PV_0438__c.field-meta.xml
<CustomField>
    <fullName>PV_0438__c</fullName>
    <formula>Resource__c = 'a0rf4000001ZREu'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV-0438</label>
    <type>Checkbox</type>
</CustomField>