objects/TM_Line__c/fields/Regular_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>Regular_Rate_New__c</fullName>
    <label>Regular Rate (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>