objects/TM_Line__c/fields/Rent_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Billing_Amount__c</fullName>
    <label>Rent Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>