objects/TM_Line__c/fields/Rental_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Rental_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Allowed</label>
    <type>Checkbox</type>
</CustomField>