objects/TM_Line__c/fields/Res_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Res_Resource_Type__c</fullName>
    <formula>Resource__r.Resource_Type__c</formula>
    <label>Res Resource Type</label>
    <type>Text</type>
</CustomField>