objects/TM_Line__c/fields/Resource_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Resource_Service_Center__c</fullName>
    <formula>Resource__r.Service_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Service Center</label>
    <type>Text</type>
</CustomField>