objects/TM_Line__c/fields/Resource_Type_UOM__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type UOM</label>
    <referenceTo>ResourceTypeUOMAssociation__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>T_M_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>