objects/TM_Line__c/fields/Sales_Invoice_Line1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Line1__c</fullName>
    <formula>Sales_Invoice_Line__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Line</label>
    <type>Text</type>
</CustomField>