objects/TM_Line__c/fields/Sales_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Sales Line)</relationshipLabel>
    <relationshipName>T_M_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>