objects/TM_Line__c/fields/Sales_Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Parent Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Sales Parent Line)</relationshipLabel>
    <relationshipName>T_M_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>