objects/TM_Line__c/fields/Same__c.field-meta.xml
<CustomField>
    <fullName>Same__c</fullName>
    <formula>IF(ISNULL(Lunch_Start_Time__c) == FALSE &amp;&amp; ISNULL(Lunch_End_Time__c) == FALSE, Total_Job_Hours__c == (Quantity__c + Lunch_Hours__c), Total_Job_Hours__c == Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same</label>
    <type>Checkbox</type>
</CustomField>