objects/TM_Line__c/fields/SameSiteStartEndTime__c.field-meta.xml
<CustomField>
    <fullName>SameSiteStartEndTime__c</fullName>
    <formula>AND((Site_Start_Time__c == Site_End_Time__c),(TM__r.Prevailing_Wage_Job__c == TRUE))</formula>
    <label>SameSiteStartEndTime</label>
    <type>Checkbox</type>
</CustomField>