objects/TM_Line__c/fields/Site_End_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Site_End_Time_24_Hrs__c</fullName>
    <formula>TEXT( Site_End_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site End Time 24 Hrs</label>
    <type>Text</type>
</CustomField>