objects/TM_Line__c/fields/Site_Start_24__c.field-meta.xml
<CustomField>
    <fullName>Site_Start_24__c</fullName>
    <formula>TEXT( Site_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Start Time 24 Hrs</label>
    <type>Text</type>
</CustomField>